# IdleFactory

./: CMakeLists.txt  README.md  main.cpp
